<resources>
    <string name="app_name">Space Launch</string>
    <string name="page_test_ic_text">Тесты</string>
    <string name="page_launches_ic_text">Запуски</string>
    <string name="page_space_foto_ic_text">Космофото</string>
    <string name="page_rockets_ic_text">Ракеты</string>
    <string name="image_description">Launch picture</string>
    <string name="space_pic_content_description">Space picture</string>
    <string name="default_launch_title">Unknown mission</string>
    <string name="default_launch_rocket">Unknown rocket</string>
    <string name="default_launch_agency">Unknown agency</string>
    <string name="default_launch_pad">Unknown pad</string>
    <string name="default_launch_location">Unknown location</string>
    <string name="default_launch_date">Unknown start date</string>
    <string name="default_launch_time">Unknown start time</string>
    <string name="launch_detail_description">Описание</string>
    <string name="launch_detail_location">Расположение</string>
    <string name="watch_button">Watch</string>
    <string name="map_description">Map. Pad location</string>
    <string name="test_image_description">test_image</string>
    <string name="next">Следующий</string>
    <string name="end_test">Завершить</string>
    <string name="search">Поиск</string>
    <string name="notification">Уведомления</string>
    <string name="notific_title">defult notifiction</string>
    <string name="notific_text">defult notifiction</string>
    <string name="channel_default_name">Общие уведомления</string>
</resources>