<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_test"
        android:enabled="true"
        android:icon="@drawable/ic_page_test"
        android:title="@string/page_test_ic_text"/>
    <item
        android:id="@+id/page_launches"
        android:enabled="true"
        android:icon="@drawable/ic_page_launches"
        android:title="@string/page_launches_ic_text"/>
    <item
        android:id="@+id/page_space_foto"
        android:enabled="true"
        android:icon="@drawable/ic_page_space_foto"
        android:title="@string/page_space_foto_ic_text"/>
    <item
        android:id="@+id/page_rockets"
        android:enabled="true"
        android:icon="@drawable/ic_page_rockets"
        android:title="@string/page_rockets_ic_text"/>
</menu>